--- a/meu portifólio/templates/base.html
+++ b/meu portifólio/templates/base.html
@@ -14,6 +14,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/projects">Projetos</a></li>
                 <li><a href="/skills">Habilidades</a></li>
+                <li><a href="/atlética">Atlética</a></li>
             </ul>
         </nav>
     </header>
