--- a/meu portifólio/templates/index.html
+++ b/meu portifólio/templates/index.html
@@ -3,4 +3,5 @@
 {% block content %}
     <h2>Bem-vindo ao meu portfólio!</h2>
     <p>Olá! Meu nome é Henrique Cariño Kitadani e este é meu portfólio.</p>
+    <img src="{{ url_for('static', filename='images/eu.jpg') }}" alt="Minha Foto" class="profile-photo">
 {% endblock %}
