--- a/meu portifólio/templates/skills.html
+++ b/meu portifólio/templates/skills.html
@@ -3,8 +3,8 @@
 {% block content %}
     <h2>Habilidades</h2>
     <ul>
-        <li>Habilidade 1</li>
-        <li>Habilidade 2</li>
-        <li>Habilidade 3</li>
+        <li>Jogar futebol muito bem</li>
+        <li>Ser desenrolado</li>
+        <li>Ser romãntico</li>
     </ul>
 {% endblock %}
