--- a/meu portifólio/templates/projects.html
+++ b/meu portifólio/templates/projects.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h2>Projetos</h2>
     <ul>
-        <li>Projeto 1 - Descrição</li>
+        <li>Em andamento</li>
 
     </ul>
 {% endblock %}
