--- a/meu portifólio/templates/skills.html
+++ b/meu portifólio/templates/skills.html
@@ -5,6 +5,6 @@
     <ul>
         <li>Jogar futebol muito bem</li>
         <li>Ser desenrolado</li>
-        <li>Ser romãntico</li>
+        <li>Ser romântico</li>
     </ul>
 {% endblock %}
