--- a/templates/skills.html
+++ b/templates/skills.html
@@ -3,8 +3,8 @@
 {% block content %}
     <h2>Habilidades</h2>
     <ul>
-        <li>Jogar futebol muito bem</li>
-        <li>Ser desenrolado</li>
-        <li>Ser romântico</li>
+        <li>- Desenvolvimento interpessoal</li>
+        <li>- Versatilidade</li>
+        <li>- Criatividade</li>
     </ul>
 {% endblock %}
